@@ -8,8 +8,8 @@ import org.mapstruct.Mapping;
 import org.mapstruct.Named;
 import org.mapstruct.factory.Mappers;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper
 public interface PublisherMapper {
@@ -24,10 +24,10 @@ public interface PublisherMapper {
     @Named("mapBooksToBookIds")
     static List<Integer> mapBooksToBookIds(List<Book> books) {
         if (books == null) {
-            return null;
+            return new ArrayList<>();
         }
         return books.stream()
                 .map(Book::getId)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
